started working on blog section
created first blog page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["insta", "Pranjal"]
+  "cSpell.words": [
+    "aesthetical",
+    "Chilkur",
+    "geparnath",
+    "Himachal",
+    "insta",
+    "kota",
+    "Pradesh",
+    "Pranjal",
+    "Udaipur"
+  ]
 }
