blog section complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,24 @@
 {
   "cSpell.words": [
     "aesthetical",
+    "agonising",
+    "Akhil",
     "Chilkur",
     "geparnath",
     "Himachal",
+    "IITB",
     "insta",
+    "Komal",
     "kota",
+    "Lavanya",
+    "MHRD",
+    "neighbours",
+    "NMEICT",
+    "organised",
     "Pradesh",
     "Pranjal",
-    "Udaipur"
+    "strucks",
+    "Udaipur",
+    "Yantra"
   ]
 }
